<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="FB_HMILaser" Id="{a1b2c3d4-e5f6-7890-abcd-ef1234567890}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_HMILaser EXTENDS FB_HMIBase
VAR
	laser : Laser.I_Laser;  // Interface reference to laser
	laserStatus : ST_HMILaserStatus;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="Cyclic" Id="{b2c3d4e5-f6a7-8901-bcde-f123456789ab}">
      <Declaration><![CDATA[METHOD Cyclic
VAR
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Sync status from laser to HMI
IF __ISVALIDREF(laser.P_LaserStatus.ComponentStatus) THEN
	laserStatus.HmiStatus.Busy := laser.P_LaserStatus.ComponentStatus.BaseStatus.Busy;
	laserStatus.HmiStatus.Done := laser.P_LaserStatus.ComponentStatus.BaseStatus.Done;
	laserStatus.HmiStatus.Error := laser.P_LaserStatus.ComponentStatus.BaseStatus.Error;
	laserStatus.HmiStatus.ErrorID := UDINT_TO_BYTE(laser.P_LaserStatus.ComponentStatus.BaseStatus.ErrorID);
END_IF

// Map laser-specific status
laserStatus.PowerLevel := laser.P_LaserStatus.PowerLevel;
laserStatus.IsFiring := laser.P_LaserStatus.IsFiring;
laserStatus.IsReady := laser.P_LaserStatus.IsReady;

// Map laser ready state to Enabled flag
laserStatus.HmiStatus.Enabled := laser.P_LaserStatus.IsReady;

// Handle commands from base class
IF cmd.Enable THEN
	Fire();
	cmd.Enable := FALSE;
END_IF

IF cmd.Disable THEN
	StopFiring();
	cmd.Disable := FALSE;
END_IF]]></ST>
      </Implementation>
    </Method>
    <Method Name="Fire" Id="{c3d4e5f6-a7b8-9012-cdef-23456789abcd}">
      <Declaration><![CDATA[METHOD Fire : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Start laser firing
Fire := laser.Fire();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="StopFiring" Id="{d4e5f6a7-b8c9-0123-def0-3456789abcde}">
      <Declaration><![CDATA[METHOD StopFiring : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Stop laser firing
StopFiring := laser.StopFiring();
]]></ST>
      </Implementation>
    </Method>
    <Method Name="SetPower" Id="{e5f6a7b8-c9d0-1234-ef01-456789abcdef}">
      <Declaration><![CDATA[METHOD SetPower : BOOL
VAR_INPUT
	powerLevel : LREAL;  // Power level (%)
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[// Set laser power level
IF __ISVALIDREF(laser) THEN
	SetPower := laser.SetPower(powerLevel);
END_IF
]]></ST>
      </Implementation>
    </Method>
    <Method Name="Init" Id="{f6a7b8c9-d0e1-2345-f012-56789abcdef1}">
      <Declaration><![CDATA[METHOD Init : BOOL
VAR_INPUT
	refLaser : Laser.I_Laser;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[laser := refLaser;
Init := TRUE;]]></ST>
      </Implementation>
    </Method>
    <Property Name="P_LaserStatus" Id="{a7b8c9d0-e1f2-3456-0123-6789abcdef12}">
      <Declaration><![CDATA[PROPERTY P_LaserStatus : ST_HMILaserStatus]]></Declaration>
      <Get Name="Get" Id="{b8c9d0e1-f2a3-4567-1234-789abcdef123}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[P_LaserStatus := laserStatus;
]]></ST>
        </Implementation>
      </Get>
    </Property>
  </POU>
</TcPlcObject>
